// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-good-app creates a \`failing\` check run 1`] = `
Object {
  "conclusion": "failure",
  "head_branch": "pr",
  "head_sha": "296e2e88379d2ca5f211bac7bc25f78dc879236c",
  "name": "write-good-app",
  "output": Object {
    "annotations": Array [
      Object {
        "annotation_level": "warning",
        "end_line": 1,
        "message": "\\"So\\" adds no meaning",
        "path": "added.md",
        "start_line": 1,
      },
    ],
    "summary": "**1 suggestion** has been found in **1 file**.",
    "title": "See suggestions below.",
  },
  "owner": "JasonEtco",
  "repo": "tests",
}
`;

exports[`write-good-app creates a \`neutral\` check run if there are no files to check 1`] = `
Object {
  "conclusion": "neutral",
  "head_branch": "pr",
  "head_sha": "296e2e88379d2ca5f211bac7bc25f78dc879236c",
  "name": "write-good-app",
  "output": Object {
    "summary": "There were no \`.md\` or \`.txt\` files that needed checking.",
    "title": "No relevant files",
  },
  "owner": "JasonEtco",
  "repo": "tests",
}
`;

exports[`write-good-app creates a \`success\` check run 1`] = `
Object {
  "conclusion": "success",
  "head_branch": "pr",
  "head_sha": "296e2e88379d2ca5f211bac7bc25f78dc879236c",
  "name": "write-good-app",
  "output": Object {
    "annotations": Array [],
    "summary": "No issues have been found, great job!",
    "title": "No issues have been found!",
  },
  "owner": "JasonEtco",
  "repo": "tests",
}
`;
